<resources>
    <string name="app_name">PhotoNavi</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_member">MemberActivity</string>
    <string name="title_activity_contents">Where are you?</string>
    <string name="intro_message">intro_message</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="host_url">http://192.168.25.25:8080/pork/api</string>
    <!-- [START Login Activity] -->
    <string name="app_title">Where are you?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">로그인</string>
    <string name="join_member">회원가입</string>
    <string name="findUserInfo"><u>이메일주소 / 비밀번호를 잊으셨나요?</u></string>
    <string name="autoLogin">자동으로 포크에 로그인하기</string>
    <!-- [END Login Activity] -->

    <!-- [START Member Activity] -->
    <string name="cellPhone">전화번호</string>
    <string name="birth">생년월일</string>
    <string name="alarmYn">알람수신여부</string>
    <string name="autoFriendYn">자동추천여부</string>
    <string name="cancel">취소하기</string>
    <string name="emailCheck"><u>이메일 주소 중복 체크</u></string>
    <string name="sendAuthNum"><u>이메일로 인증번호 발송</u></string>
    <!-- [END Member Activity] -->

    <!-- [START Content Activity] -->
    <string name="regist_text">글쓰기</string>
    <string name="regist_photo">사진등록</string>
    <string name="regist_movie">동영상등록</string>
    <string name="prompt">네비게이션 선택</string>
    <string name="nagivation">네비게이션</string>
    <string name="like">좋아요</string>
    <string name="bookmark">북마크</string>
    <string name="regist_done">등록하기</string>
    <string name="setting">설정</string>
    <string name="total"><b>전체</b></string>
    <string name="my"><b>내꺼</b></string>
    <string name="friend"><b>친구</b></string>
    <string name="bookmarkBold"><b>북마크</b></string>

    <!-- [START Content Activity] -->

    <!-- [START Regist Activity] -->
    <string name="my_location">내위치</string>
    <string name="with_friend">누구와</string>
    <!-- [END Regist Activity] -->

    <!-- [START Regist Activity] -->
    <string name="save">저장하기</string>
    <!-- [END Regist Activity] -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_regist_text">RegistTextActivity</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_setting">SettingActivity</string>

    <string name="kakao_app_key">edbc03bcbc1834f050924119afe65aa1</string>

</resources>
