<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.MemberActivity"
    android:orientation="vertical"
    android:baselineAligned="false"
    android:background="#FFFFFF">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:scrollbars="none"
        style="@style/AppTheme">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:id="@+id/tvPassword"
                android:layout_marginLeft="20dp"
                android:textColor="#FF9800"
                android:layout_marginTop="5dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etPassword"
                android:hint="비밀번호"
                style="@style/AppTheme"
                android:inputType="textPassword"
                android:textColor="#9e9e9e"
                android:drawableLeft="@drawable/ic_pwd"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etPasswordConfirm"
                android:hint="비밀번호확인"
                style="@style/AppTheme"
                android:inputType="textPassword"
                android:layout_marginBottom="5dp"
                android:textColor="#9e9e9e"
                android:drawableLeft="@drawable/ic_pwd"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cellPhone"
                android:id="@+id/tvCellPhone"
                android:layout_marginLeft="20dp"
                android:textColor="#FF9800" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etCellNum"
                android:hint="&apos;-&apos; 없이"
                style="@style/AppTheme"
                android:inputType="phone"
                android:layout_marginBottom="5dp"
                android:textColor="#9e9e9e"
                android:drawableLeft="@drawable/ic_phone"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarmYn"
                    android:id="@+id/swAlarm"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:textColor="#FF9800" />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/autoFriendYn"
                    android:id="@+id/swAuto"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:textColor="#FF9800" />
            </LinearLayout>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/spNavigation"
                android:spinnerMode="dropdown"
                android:background="@drawable/button_border"
                android:prompt="@string/prompt"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:id="@+id/btnJoin"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="#FF9800"
                    android:background="@drawable/button_border"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_marginLeft="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:id="@+id/btnJoinCancle"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#FF9800"
                    android:background="@drawable/button_border"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_marginRight="15dp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>